--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="city"></div>
         </section>
         <div class="weather-current">
-          <div class="temp"><span>°c</span></div>
+          <div class="temp"><span></span></div>
           <div class="icon"></div>
           <div class="weather"></div>
           <div class="hi-low"></div>
